--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -108,10 +108,23 @@
 
 	<build>
 		<plugins>
+		
 			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-			</plugin>
+      			<groupId>org.springframework.boot</groupId>
+      			<artifactId>spring-boot-maven-plugin</artifactId>
+      			<version>2.2.0.RELEASE</version>
+      			<configuration>
+        			<mainClass>${start-class}</mainClass>
+       				<layout>ZIP</layout>
+      			</configuration>
+     			<executions>
+       				<execution>
+         				<goals>
+           					<goal>repackage</goal>
+         				</goals>
+       				</execution>
+      			</executions>
+    		</plugin>		
 		</plugins>
 	</build>
 
