Updated pom.xml main class for build.

--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -116,7 +116,7 @@
       			<artifactId>spring-boot-maven-plugin</artifactId>
       			<version>2.2.0.RELEASE</version>
       			<configuration>
-        			<mainClass>${start-class}</mainClass>
+        			<mainClass>com.centralbookexchange.webapp.CBEApplication</mainClass>
        				<layout>ZIP</layout>
       			</configuration>
      			<executions>
