--- a/webapp/pom.xml
+++ b/webapp/pom.xml
@@ -5,7 +5,7 @@
 	<groupId>com.centralbookexchange</groupId>
 	<artifactId>webapp</artifactId>
 	<packaging>jar</packaging>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.2</version>
 	<name>webapp</name>
 	<description>Central Book Exchange project using Spring Boot framework</description>
 
