--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -10,3 +10,21 @@ spring.thymeleaf.check-template=true
 spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# ?autoReconnect=true&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/cbe
+spring.datasource.username=admin
+spring.datasource.password=avocadoorchard123
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
+#spring.datasource.tomcat.testWhileIdle = true
+#spring.datasource.tomcat.timeBetweenEvictionRunsMillis = 60000
+#spring.datasource.tomcat.validationQuery = SELECT 1
+
+spring.datasource.testWhileIdle = true
+spring.datasource.timeBetweenEvictionRunsMillis = 60000
+spring.datasource.validationQuery = SELECT 1
