--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -12,7 +12,7 @@ spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
 # ?autoReconnect=true&useSSL=false
-spring.datasource.url=jdbc:mysql://localhost:3306/cbe
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cbe?useSSL=false
 spring.datasource.username=admin
 spring.datasource.password=avocadoorchard123
 #spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
