--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,9 +1,12 @@
 server.port=80
 
 
+#==== logging info ======#
 logging.level.org.apache.tomcat=INFO
 logging.level.org.springframework.web=DEBUG
 
+
+#==== connect to thymeleaf ======#
 spring.thymeleaf.cache=false
 spring.thymeleaf.enabled=true
 spring.thymeleaf.check-template=true
@@ -11,15 +14,26 @@ spring.thymeleaf.check-template-location=true
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 
-# ?autoReconnect=true&useSSL=false
+
+#==== connect to mysql ======#
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cbe?useSSL=false
 spring.datasource.username=admin
 spring.datasource.password=avocadoorchard123
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+
+### old
+# ?autoReconnect=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cbe?useSSL=false
+#spring.datasource.username=admin
+#spring.datasource.password=avocadoorchard123
+#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+
 
 #spring.datasource.tomcat.testWhileIdle = true
 #spring.datasource.tomcat.timeBetweenEvictionRunsMillis = 60000
@@ -28,3 +42,6 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.datasource.testWhileIdle = true
 spring.datasource.timeBetweenEvictionRunsMillis = 60000
 spring.datasource.validationQuery = SELECT 1
+
+
+#==== any other properties ======#
