--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -16,32 +16,23 @@ spring.thymeleaf.suffix=.html
 
 
 #==== connect to mysql ======#
-spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cbe?useSSL=false
 spring.datasource.username=admin
 spring.datasource.password=avocadoorchard123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.datasource.tomcat.max-wait= 20000
+spring.datasource.tomcat.max-active= 50
+spring.datasource.tomcat.max-idle= 20
+spring.datasource.tomcat.min-idle= 15
 
-### old
-# ?autoReconnect=true&useSSL=false
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/cbe?useSSL=false
-#spring.datasource.username=admin
-#spring.datasource.password=avocadoorchard123
-#spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=validate
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+logging.level.org.hibernate.SQL= DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder= TRACE 
 
 
-#spring.datasource.tomcat.testWhileIdle = true
-#spring.datasource.tomcat.timeBetweenEvictionRunsMillis = 60000
-#spring.datasource.tomcat.validationQuery = SELECT 1
-
-spring.datasource.testWhileIdle = true
-spring.datasource.timeBetweenEvictionRunsMillis = 60000
-spring.datasource.validationQuery = SELECT 1
+logging.level.org.springframework.web=DEBUG
+spring.http.log-request-details=true
 
 
 #==== any other properties ======#
