--- a/webapp/src/main/resources/application.properties
+++ b/webapp/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 server.port=80
-
+spring.mvc.view.prefix=/WEB-INF/jsp/
+spring.mvc.view.suffix=.jsp
 
 #==== logging info ======#
 logging.level.org.apache.tomcat=INFO
@@ -7,12 +8,12 @@ logging.level.org.springframework.web=DEBUG
 
 
 #==== connect to thymeleaf ======#
-spring.thymeleaf.cache=false
-spring.thymeleaf.enabled=true
-spring.thymeleaf.check-template=true
-spring.thymeleaf.check-template-location=true
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+#spring.thymeleaf.cache=false
+spring.thymeleaf.enabled=false
+#spring.thymeleaf.check-template=true
+#spring.thymeleaf.check-template-location=true
+#spring.thymeleaf.prefix=classpath:/templates/
+#spring.thymeleaf.suffix=.html
 
 
 #==== connect to mysql ======#
